--- a/app/css/online.css
+++ b/app/css/online.css
@@ -1,4 +1,32 @@
 @charset "UTF-8";
+@font-face {
+  font-weight: 400;
+  font-family: "Roboto";
+  src: url(../fonts/Roboto-Regular.ttf);
+  font-style: normal;
+}
+
+@font-face {
+  font-weight: 400;
+  font-family: "Roboto";
+  src: url(../fonts/Roboto-Italic.ttf);
+  font-style: italic;
+}
+
+@font-face {
+  font-weight: 600;
+  font-family: "Roboto";
+  src: url(../fonts/Roboto-Bold.ttf);
+  font-style: normal;
+}
+
+@font-face {
+  font-weight: 600;
+  font-family: "Roboto";
+  src: url(../fonts/Roboto-BoldItalic.ttf);
+  font-style: italic;
+}
+
 .cinema-header {
   z-index: 5000;
   flex-grow: 0;
@@ -455,6 +483,95 @@
   input::placeholder {
     color: #fff;
   } */
+.cinema-text[data-readmore] {
+  display: block;
+  width: 100%;
+}
+
+.cinema-text[data-readmore] {
+  transition: height 100ms;
+  overflow: hidden;
+}
+
+/* .text-wrapper {
+	display: flex;
+	flex-direction: column;
+
+	padding: 40px 30px;
+	background-color: #ffffff;
+	border-radius: 10px;
+}
+
+.spoiler-text.btn-border {
+	margin: 0 auto;
+} */
+.cinema-text {
+  margin-bottom: 10px;
+  padding: 10px 0;
+}
+
+.cinema-text {
+  position: relative;
+}
+
+/* .text-wrapper .text */
+.cinema-text[id^="rmjs"]::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -5px;
+  height: 100px;
+  background: linear-gradient(0deg, #f8f8f8 10%, rgba(248, 248, 248, 0) 100%);
+  z-index: 100;
+  width: 100%;
+}
+
+.cinema-text.readmore-js-collapsed[id^="rmjs"]::before {
+  content: none;
+}
+
+.online-cinema-wrapper .btn-border {
+  text-transform: initial;
+  font-size: 16px;
+}
+
+.cinema-text .btn-border {
+  font-family: "Montserrat-Semibold", "Arial", sans-serif;
+  text-transform: none;
+}
+
+.cinema-text--light {
+  padding: 10px 0;
+  background-color: transparent;
+}
+
+.cinema-text ul {
+  margin: 20px 0;
+  margin-top: 0;
+  padding-left: 15px;
+}
+
+.cinema-text ul li {
+  position: relative;
+  margin-bottom: 5px;
+  padding-left: 20px;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+.cinema-text ul li::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  width: 8px;
+  height: 8px;
+  background-color: #df0e77;
+  border-radius: 100%;
+}
+
 .gallery-section {
   padding-top: 20px;
   margin-bottom: 6.27%;
@@ -1376,6 +1493,7 @@
 
 .online-card__age.age span {
   padding: 17px 0;
+  background: #F8F8F8;
 }
 
 .online-card__title {
@@ -1698,8 +1816,154 @@
   text-align: center;
   height: 100%;
   color: #333333;
-  background-color: #ffffff;
+  background-color: #F8F8F8;
   border-radius: 100%;
+}
+
+.online-review {
+  margin-bottom: 6.1%;
+}
+
+.online-review__item {
+  padding: 33px 30px;
+  background: #FFFFFF;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+
+.online-review__item:last-child {
+  margin-bottom: 0;
+}
+
+.online-review__title {
+  display: flex;
+  align-items: center;
+}
+
+.online-review__title span {
+  font-family: "Roboto", "Arial", sans-serif;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 0.83;
+  margin-right: 28px;
+}
+
+.online-review__title a {
+  font-size: 14px;
+  line-height: 1;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  padding: 18px 28px;
+  background: linear-gradient(143deg, #df0e77 7.13%, #390796 95%);
+  background-size: 100% 100%;
+  border-radius: 100px;
+  transition: all 0.5s ease;
+}
+
+.online-review__title a:hover,
+.online-review__title a:active {
+  background-size: 100% 400%;
+}
+
+.online-review__title {
+  margin-bottom: 40px;
+}
+
+.online-review__info {
+  display: flex;
+}
+
+.online-review__user-pic {
+  min-width: 95px;
+  min-height: 95px;
+  margin-right: 26px;
+}
+
+.online-review__user-pic img {
+  width: 95px;
+  height: 95px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.online-review__user-block {
+  margin-bottom: 15px;
+  display: flex;
+  flex-direction: column;
+}
+
+.online-review__user-name {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.5;
+  margin-bottom: 10px;
+}
+
+.online-review__time {
+  font-size: 14px;
+  line-height: 1.5;
+  color: #9C9C9C;
+}
+
+.online-review__review {
+  font-size: 14px;
+  line-height: 1.79;
+}
+
+.online-review__more-block {
+  display: flex;
+  justify-content: center;
+}
+
+.online-review__more {
+  margin-top: 20px;
+  display: inline-block;
+  /* width: 95px;
+    height: 95px; */
+  padding: 1px;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.25;
+  background: linear-gradient(325deg, #df0e77 7.13%, #390796 95%);
+  background-size: 100% 100%;
+  border: none;
+  border-radius: 100%;
+  overflow: hidden;
+  transition: 0.6s;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  border-radius: 100px;
+}
+
+.online-review__more span {
+  font-size: 14px;
+  display: inline-block;
+  padding: 15px 30px;
+  width: 100%;
+  text-align: center;
+  height: 100%;
+  color: #333333;
+  background-color: #F8F8F8;
+  border-radius: 100%;
+  text-transform: uppercase;
+  border-radius: 100px;
+}
+
+.online-review__button-more {
+  display: inline-block;
+  line-height: 1.79;
+  color: #DF0E77;
+  background: #fff;
+  padding: 0;
+  text-shadow: none;
+  overflow: hidden;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.online-review__button-more.readmore-js-collapsed[id^="rmjs"]::before {
+  content: none;
 }
 
 @media (max-width: 1200px) {
@@ -1753,11 +2017,29 @@
   .online-card__rate-digits {
     font-size: calc(40px + 40 * ((100vw - 320px) / 1170));
   }
+  .online-review__user-name {
+    font-size: calc(12px + 4 * ((100vw - 320px) / 1170));
+  }
+  .online-review__time {
+    font-size: calc(12px + 2 * ((100vw - 320px) / 1170));
+  }
 }
 
 @media (max-width: 1000px) {
   .online-card__description-item:first-child {
     margin-right: 60px;
+  }
+  .online-review__item {
+    padding: 20px;
+  }
+  .online-review__user-pic {
+    margin-right: 15px;
+  }
+  .online-review__user-name {
+    margin-bottom: 0;
+  }
+  .online-review__user-block {
+    margin-bottom: 6px;
   }
 }
 
@@ -1816,6 +2098,12 @@
   .online-card__rate {
     width: 115px;
   }
+  .online-review__title {
+    margin-bottom: 20px;
+  }
+  .online-review__item {
+    padding: 15px;
+  }
 }
 
 @media (max-width: 400px) {
@@ -1827,6 +2115,14 @@
   }
   .online-card__rate {
     width: 65px;
+  }
+  .online-review__title {
+    display: flex;
+    flex-direction: column;
+  }
+  .online-review__title span {
+    margin-right: 0;
+    margin-bottom: 20px;
   }
 }
 
@@ -1875,6 +2171,91 @@
 .online-card__description .text p {
   font-size: 14px;
   line-height: 1.79;
+}
+
+.online-cinema-wrapper .sort {
+  background-color: #F8F8F8;
+}
+
+.online-catalog.grid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 20px;
+  grid-auto-flow: dense;
+  margin-bottom: 40px;
+}
+
+.online-cinema-wrapper .sort {
+  padding: 20px 0;
+}
+
+.online-sort .trigger-filter,
+.online-sort .nice-select {
+  background-color: #F8F8F8;
+}
+
+.online-sort__custom-new {
+  display: inline-block;
+  margin: 10px 0;
+  margin-right: 20px;
+  padding: 1px;
+  font-size: 16px;
+  line-height: 1;
+  background: linear-gradient(325deg, #df0e77 7.13%, #390796 95%);
+  background-size: 100% 100%;
+  border: none;
+  border-radius: 100%;
+  overflow: hidden;
+  transition: 0.6s;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  border-radius: 10px;
+}
+
+.online-sort__custom-new span {
+  font-size: 14px;
+  display: inline-block;
+  padding: 14px 47px;
+  width: 100%;
+  text-align: center;
+  height: 100%;
+  color: #333333;
+  background-color: #F8F8F8;
+  border-radius: 10px;
+}
+
+.online-sort__custom {
+  display: inline-block;
+  margin: 10px 0;
+  margin-right: 20px;
+  padding: 1px;
+  line-height: 1;
+  background: #F8F8F8;
+  overflow: hidden;
+  transition: all 0.3s ease;
+  border-radius: 10px;
+  font-size: 14px;
+  border: 1px solid #D7D7D7;
+  padding: 14px 20px;
+  padding-left: 40px;
+  position: relative;
+}
+
+.online-sort__default {
+  border: 1px solid #F8F8F8;
+  position: relative;
+}
+
+.online-sort__default::before {
+  position: absolute;
+  content: "";
+  top: 50%;
+  transform: translate(50%, -50%);
+  left: 15px;
+  background: url(../../img/icon-default.png) no-repeat;
+  background-size: contain;
+  width: 6px;
+  height: 6px;
 }
 
 /*# sourceMappingURL=online.css.map */
