--- a/app/css/online.css
+++ b/app/css/online.css
@@ -410,79 +410,6 @@
   right: 0;
 }
 
-/* .wrap {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-100%, -50%);
-    width: 0px;
-    height: 55px;
-    background-image: url(../../img/search-icon.png);
-    background-size: 27px;
-    background-position: center;
-    background-repeat: no-repeat;
-    line-height: 55px;
-    padding-right: 55px;
-    border-radius: 5px;
-    transition: all 0.5s ease;
-  }
-
-  .example {
-      position: relative;
-      padding: 100px 0;
-      background-color: yellow;
-  } */
-/* .wrap{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 0px;
-    height: 55px;
-    background: #7c23b2;
-    line-height: 55px;
-    padding-right: 55px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.5);
-    transition: all 0.5s ease;
-  } */
-/* .input{
-    border: 0;
-    background: transparent;
-    width: 0%;
-    outline: none;
-    font-family: sans-serif;
-    font-size: 18px;
-    color: #fff;
-    font-style: italic;
-    transition: all 0.3s ease;
-    position: relative;
-  }
-  
-  .wrap .fa{
-    color: #fff;
-    position: absolute;
-    right: 17px;
-    top: 15px;
-    font-size: 22px;
-    cursor: pointer;
-  }
-  
-  .wrap.active{
-    width: 250px;
-    padding-left: 25px;
-    transition: all 0.5s ease;
-  }
-  
-  .input.active{
-    width: 98%;
-    padding-left: 5px;
-    transition: all 0.5s 0.8s ease;
-  }
-  
-  input::placeholder {
-    color: #fff;
-  } */
 .cinema-text[data-readmore] {
   display: block;
   width: 100%;
@@ -507,7 +434,6 @@
 } */
 .cinema-text {
   margin-bottom: 10px;
-  padding: 10px 0;
 }
 
 .cinema-text {
@@ -738,8 +664,8 @@
   position: relative;
 }
 
-.cinema-recommendations .online-cinema__block {
-  margin-bottom: 17px;
+.cinema-recomendation .online-cinema__block {
+  margin-bottom: 1.6%;
 }
 
 .online-cinema__title-block {
@@ -827,7 +753,7 @@
 
 .cinema-card__img {
   position: relative;
-  height: 290px;
+  height: 282px;
   border-radius: 10px;
 }
 
@@ -1140,7 +1066,7 @@
   font-size: 28px;
   line-height: 1.36;
   color: #333333;
-  margin-bottom: 27px;
+  margin-bottom: 20px;
   text-align: initial;
   text-transform: initial;
   font-family: "Montserrat", "Arial", sans-serif;
@@ -1150,9 +1076,10 @@
   margin-bottom: 5.2%;
 }
 
-.cinema-seo-txt__block p {
+.cinema-seo-txt__block p,
+.cinema-seo-txt__block li {
   font-size: 16px;
-  line-height: 1.36;
+  line-height: 1.62;
 }
 
 .cinema-seo-txt__block .btn-border {
@@ -1454,6 +1381,7 @@
   background-color: #F8F8F8;
   padding: 0;
   border-bottom: none;
+  margin-bottom: 15px;
 }
 
 .online-breadcrumbs .breadcrumbs-list__item a,
@@ -1874,21 +1802,21 @@
 }
 
 .online-review__user-pic {
-  min-width: 95px;
-  min-height: 95px;
+  min-width: 86px;
+  min-height: 86px;
   margin-right: 26px;
 }
 
 .online-review__user-pic img {
-  width: 95px;
-  height: 95px;
+  width: 86px;
+  height: 86px;
   border-radius: 50%;
   -o-object-fit: cover;
      object-fit: cover;
 }
 
 .online-review__user-block {
-  margin-bottom: 15px;
+  margin-bottom: 10px;
   display: flex;
   flex-direction: column;
 }
@@ -2177,12 +2105,16 @@
   background-color: #F8F8F8;
 }
 
-.online-catalog.grid {
+.online-catalog {
+  margin-bottom: 8.5%;
+}
+
+.online-catalog__group.grid {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-gap: 20px;
   grid-auto-flow: dense;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 
 .online-cinema-wrapper .sort {
@@ -2197,11 +2129,11 @@
 .online-sort__custom-new {
   display: inline-block;
   margin: 10px 0;
-  margin-right: 20px;
+  margin-right: 34px;
   padding: 1px;
   font-size: 16px;
   line-height: 1;
-  background: linear-gradient(325deg, #df0e77 7.13%, #390796 95%);
+  background: linear-gradient(0deg, #df0e77 7.13%, #390796 95%);
   background-size: 100% 100%;
   border: none;
   border-radius: 100%;
@@ -2210,6 +2142,10 @@
   cursor: pointer;
   transition: all 0.3s ease;
   border-radius: 10px;
+}
+
+.online-cinema-wrapper .sort-list__item {
+  margin-right: 34px;
 }
 
 .online-sort__custom-new span {
@@ -2222,13 +2158,19 @@
   color: #333333;
   background-color: #F8F8F8;
   border-radius: 10px;
+  transition: all 0.3s ease;
+}
+
+.online-sort__custom-new:hover span,
+.online-sort__custom-new:active span {
+  color: #fff;
+  background-color: transparent;
 }
 
 .online-sort__custom {
   display: inline-block;
   margin: 10px 0;
-  margin-right: 20px;
-  padding: 1px;
+  margin-right: 34px;
   line-height: 1;
   background: #F8F8F8;
   overflow: hidden;
@@ -2241,9 +2183,54 @@
   position: relative;
 }
 
+.online-sort__custom:last-child {
+  margin-right: 0;
+}
+
+.online-sort__custom:before {
+  position: absolute;
+  content: "+";
+  top: 50%;
+  transform: translate(50%, -50%);
+  left: 15px;
+}
+
+.online-sort__custom:hover {
+  background: #DF0E77;
+  border: 1px solid #DF0E77;
+  color: #fff;
+}
+
+.online-sort__custom.current {
+  background: #DF0E77;
+  border: 1px solid #DF0E77;
+  color: #fff;
+  padding-left: 20px;
+  padding-right: 40px;
+}
+
+.online-sort__custom.current:before {
+  display: none;
+}
+
+.online-sort__custom.current:after {
+  position: absolute;
+  content: "+";
+  right: 18px;
+  transform: rotate(45deg);
+}
+
 .online-sort__default {
   border: 1px solid #F8F8F8;
   position: relative;
+  padding-left: 20px;
+}
+
+.online-sort__default:hover {
+  background: #F8F8F8;
+  border: 1px solid #F8F8F8;
+  padding-left: 20px;
+  color: #333;
 }
 
 .online-sort__default::before {
@@ -2251,11 +2238,119 @@
   content: "";
   top: 50%;
   transform: translate(50%, -50%);
-  left: 15px;
+  left: 0;
   background: url(../../img/icon-default.png) no-repeat;
   background-size: contain;
   width: 6px;
   height: 6px;
+}
+
+.online-catalog .btn-border,
+.online-slider-load .btn-border {
+  display: block;
+}
+
+.online-slider-load {
+  margin-bottom: 5.25%;
+}
+
+@media (max-width: 1200px) {
+  .online-sort__custom-new,
+  .online-cinema-wrapper .sort-list__item,
+  .online-sort__custom {
+    margin-right: 20px;
+  }
+}
+
+@media (max-width: 1170px) {
+  .cinema-seo-txt .cinema-catalog__title-group h1 {
+    font-size: calc(25px + 15 * ((100vw - 320px) / 1170));
+  }
+  .cinema-catalog__tags span,
+  .cinema-seo-txt__block p,
+  .cinema-seo-txt__block li {
+    font-size: calc(12px + 4 * ((100vw - 320px) / 1170));
+  }
+}
+
+@media (max-width: 1100px) {
+  .online-catalog__group.grid {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media (max-width: 850px) {
+  .online-catalog__group.grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 800px) {
+  .online-sort__custom-new,
+  .online-cinema-wrapper .sort-list__item,
+  .online-sort__custom {
+    margin-right: 10px;
+  }
+  .online-cinema-wrapper .sort {
+    padding: 0;
+  }
+  .online-breadcrumbs .breadcrumbs {
+    margin-bottom: 0;
+  }
+  .online-cinema-wrapper .btn-border {
+    font-size: 12px;
+  }
+  .online-cinema-wrapper .btn-border span {
+    padding: 19px 30px;
+  }
+  .online-cinema-wrapper .btn-border {
+    max-width: 170px;
+  }
+}
+
+@media (max-width: 650px) {
+  .online-catalog__group.grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 500px) {
+  .online-sort__custom-new,
+  .online-cinema-wrapper .sort-list__item,
+  .online-sort__custom {
+    margin: 5px 5px 5px 0;
+  }
+  .cinema-seo-txt .cinema-catalog__title-group h1 {
+    margin-bottom: 10px;
+  }
+  .cinema-catalog__tags {
+    margin-bottom: 5px;
+  }
+}
+
+@media (max-width: 450px) {
+  .online-catalog__group.grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .online-cinema-wrapper .sort-list {
+    flex-direction: column;
+  }
+  .online-cinema-wrapper .trigger-filter,
+  .online-cinema-wrapper .nice-select {
+    width: 100%;
+  }
+}
+
+@media (max-width: 400px) {
+  /* .online-cinema-wrapper .trigger-filter, 
+    .online-cinema-wrapper .nice-select {
+        padding-right: 50px;
+        padding-left: 10px;
+    }
+
+    .online-sort__custom-new span {
+        padding: 14px 30px;
+    } */
 }
 
 /*# sourceMappingURL=online.css.map */
