--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,5 +1,9 @@
 @include font-face("Montserrat-Black", "Montserrat-Black", 400);
+@include font-face("Montserrat-SemiBold", "Montserrat-SemiBold", 400);
+@include font-face("Roboto-Bold", "Roboto-Bold", 400);
+@include font-face("Roboto-BoldItalic", "Roboto-BoldItalic", 400);
+@include font-face("Roboto-Italic", "Roboto-Italic", 400);
+@include font-face("Roboto-Regular", "Roboto-Regular", 400);
 @include font-face("Montserrat-Bold", "Montserrat-Bold", 400);
 @include font-face("Montserrat-Medium", "Montserrat-Medium", 400);
 @include font-face("Montserrat-Regular", "Montserrat-Regular", 400);
-@include font-face("Montserrat-SemiBold", "Montserrat-SemiBold", 400);
