--- a/app/css/online.css
+++ b/app/css/online.css
@@ -70,8 +70,46 @@
   height: 26px;
 }
 
-.cinema-header__switch input {
-  display: none;
+.cinema-header__switch.--white .cinema-header__slider {
+  background: linear-gradient(0deg, #df0e77 7.13%, #390796 95%);
+  transition: background 3s ease;
+}
+
+.cinema-header__switch.--white .cinema-header__slider .circle {
+  left: 3px;
+  background: #fff;
+}
+
+.cinema-header__switch.--white .cinema-header__slider .line {
+  background: #fff;
+}
+
+.cinema-header__switch.--white .cinema-header__slider .moon svg {
+  transform: scale(0.8);
+}
+
+/**/
+.cinema-header__switch.--dark .cinema-header__slider {
+  background: #fff;
+  box-shadow: 0 0 1px #333;
+  transition: background 3s ease;
+}
+
+.cinema-header__switch.--dark .cinema-header__slider .circle {
+  left: 42px;
+  background: #333;
+}
+
+.cinema-header__switch.--dark .cinema-header__slider .line {
+  background: #333;
+}
+
+.cinema-header__switch.--dark .cinema-header__slider .sun svg {
+  transform: scale(0.8);
+}
+
+.cinema-header__slider.cinema-header__round {
+  border-radius: 34px;
 }
 
 .cinema-header__slider {
@@ -83,7 +121,7 @@
   bottom: 0;
   background: linear-gradient(0deg, #df0e77 7.13%, #390796 95%);
   background-size: 100% 135%;
-  transition: all 0.5s ease;
+  transition: background 3s ease;
 }
 
 .cinema-header__slider .sun {
@@ -93,23 +131,29 @@
   left: 5px;
   top: 50%;
   transform: translateY(-50%);
-  background: url("../../img/icon_sun.svg") no-repeat;
   background-size: contain;
   transition: all 0.5s ease;
   z-index: 3;
+}
+
+.cinema-header__slider .sun svg {
+  transition: all 0.3s ease 0.4s;
 }
 
 .cinema-header__slider .moon {
   position: absolute;
   height: 15px;
   width: 12px;
-  right: 6px;
+  right: 7px;
   top: 50%;
   transform: translateY(-50%);
-  background: url("../../img/icon_moon.svg") no-repeat;
   background-size: contain;
   transition: all 0.5s ease;
   z-index: 3;
+}
+
+.cinema-header__slider .moon svg {
+  transition: all 0.3s ease 0.4s;
 }
 
 .circle {
@@ -135,48 +179,6 @@
   transform: translateY(-50%);
   z-index: 2;
   transition: all 0.5s ease;
-}
-
-.cinema-header input:checked + .cinema-header__slider {
-  background: #fff;
-}
-
-.cinema-header input:focus + .cinema-header__slider {
-  box-shadow: 0 0 1px #333;
-}
-
-.cinema-header input:checked + .cinema-header__slider .circle {
-  left: 42px;
-  background: #333;
-}
-
-.cinema-header input:checked + .cinema-header__slider .line {
-  background: #333;
-}
-
-.cinema-header input:checked + .cinema-header__slider .sun {
-  height: 12px;
-  width: 12px;
-  left: 7px;
-}
-
-.cinema-header input:checked + .cinema-header__slider .sun svg {
-  height: 12px;
-  width: 12px;
-}
-
-.cinema-header input:checked + .cinema-header__slider .moon {
-  height: 18px;
-  width: 15px;
-}
-
-.cinema-header input:checked + .cinema-header__slider .moon svg {
-  height: 18px;
-  width: 15px;
-}
-
-.cinema-header__slider.cinema-header__round {
-  border-radius: 34px;
 }
 
 /* .cinema-header__slider.cinema-header__round:before {
@@ -210,7 +212,7 @@
   left: 0;
   height: 2px;
   width: 100%;
-  background: linear-gradient(to right, #DF0E77, #DF0E77 12.5%, #390796 12.5%, #390796 25%, #DF0E77 25%, #DF0E77 37.5%, #390796 37.5%, #390796 50%, #DF0E77 50%, #DF0E77 62.5%, #390796 62.5%, #390796 75%, #DF0E77 75%, #DF0E77 87.5%, #390796 87.5%);
+  background: linear-gradient(to right, #df0e77, #df0e77 12.5%, #390796 12.5%, #390796 25%, #df0e77 25%, #df0e77 37.5%, #390796 37.5%, #390796 50%, #df0e77 50%, #df0e77 62.5%, #390796 62.5%, #390796 75%, #df0e77 75%, #df0e77 87.5%, #390796 87.5%);
   background-size: 100% 2px;
 }
 
@@ -245,7 +247,7 @@
 }
 
 .cinema-header-actions-item:nth-child(2) {
-  border-left: 1px solid #F5F5F5;
+  border-left: 1px solid #f5f5f5;
 }
 
 .cinema-header-search {
@@ -258,7 +260,7 @@
 }
 
 .cinema-header .page-header__item:nth-child(1) {
-  width: 25%;
+  width: 20%;
   padding: 30px 0;
   display: flex;
   align-items: center;
@@ -274,6 +276,7 @@
 }
 
 .cinema-header .page-header__item:nth-child(2) {
+  margin: 0 30px;
   width: 60%;
 }
 
@@ -299,11 +302,12 @@
   left: 0;
   height: 2px;
   width: 100%;
-  background: linear-gradient(to right, #DF0E77, #DF0E77 50%, #390796 50%, #390796);
+  background: linear-gradient(to right, #df0e77, #df0e77 50%, #390796 50%, #390796);
   background-size: 100% 2px;
 }
 
 .header__menu {
+  padding: 0 30px;
   font-size: 16px;
 }
 
@@ -323,7 +327,7 @@
   grid-column-gap: 80px;
   grid-auto-flow: column;
   padding: 30px 70px 30px 30px;
-  background: #FFFFFF;
+  background: #ffffff;
   box-shadow: 0px 8px 31px rgba(0, 0, 0, 0.25), 0px 2px 1px rgba(0, 0, 0, 0.13);
 }
 
@@ -362,7 +366,7 @@
 }
 
 .cinema-header .page-header-actions-item:nth-child(2) {
-  width: 45%;
+  width: 60%;
   padding: 25px 5px;
 }
 
@@ -374,11 +378,11 @@
 .header__menu-sub-link:hover,
 .header__menu-sub-link:active {
   text-shadow: 0px 0px 0px #df0e77, 0px 0px 0px #df0e77;
-  color: #DF0E77;
+  color: #df0e77;
 }
 
 .cinema-header .search-box {
-  width: 45%;
+  width: 40%;
   margin: 0;
   padding: 0;
   justify-content: center;
@@ -571,7 +575,7 @@
   margin-top: 0;
   display: flex;
   align-items: center;
-  background: #DF0E77;
+  background: #df0e77;
   opacity: 1;
 }
 
@@ -621,7 +625,7 @@
   font-weight: 600;
   font-size: 50px;
   line-height: 1;
-  color: #FFFFFF;
+  color: #ffffff;
   margin-bottom: 5%;
   text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
 }
@@ -630,7 +634,7 @@
   font-weight: 500;
   font-size: 18px;
   line-height: 1.5;
-  color: #FFFFFF;
+  color: #ffffff;
   margin-bottom: 5%;
   text-shadow: 0px 0px 5px black;
 }
@@ -642,7 +646,7 @@
   line-height: 18px;
   color: #333333;
   padding: 3% 12%;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   border-radius: 50px;
   box-shadow: 0px 0px 5px black;
   transition: all 0.3s ease;
@@ -651,7 +655,7 @@
 .main-galery__link:active,
 .main-galery__link:hover {
   text-shadow: 0px 0px 0px #df0e77, 0px 0px 0px #df0e77;
-  color: #DF0E77;
+  color: #df0e77;
 }
 
 .main-galery__list-item.swiper-slide-prev .main-galery__info,
@@ -699,7 +703,7 @@
 
 .online-cinema__title:hover,
 .online-cinema__title:active {
-  color: #DF0E77;
+  color: #df0e77;
 }
 
 .online-cinema__title:hover:before,
@@ -733,7 +737,7 @@
   position: relative;
   max-width: 400px;
   margin: 0 auto;
-  border: 1px solid #DEDEDE;
+  border: 1px solid #dedede;
   border-radius: 10px;
   transition: all 0.3s ease-in;
 }
@@ -789,13 +793,13 @@
   content: "";
   top: 14px;
   left: 14px;
-  background-color: #DF0E77;
+  background-color: #df0e77;
   border-radius: 10px;
   font-weight: 500;
   font-size: 10px;
   line-height: 10px;
   text-transform: uppercase;
-  color: #FFFFFF;
+  color: #ffffff;
   display: inline-block;
   padding: 8px 14px;
   z-index: 2;
@@ -836,7 +840,7 @@
 
 .cinema-card__like:hover path,
 .cinema-card__like:active path {
-  fill: #DF0E77;
+  fill: #df0e77;
   stroke: transparent;
 }
 
@@ -851,16 +855,18 @@
 
 .cinema-card__watchLater:hover svg,
 .cinema-card__watchLater:active svg {
-  fill: #DF0E77;
-  stroke: #DF0E77;
+  fill: #df0e77;
+  stroke: #df0e77;
 }
 
 .cinema-card__notShow:hover svg,
 .cinema-card__notShow:active svg {
-  stroke: #DF0E77;
+  stroke: #df0e77;
 }
 
-.addFav, .watchLater, .notShow {
+.addFav,
+.watchLater,
+.notShow {
   display: block;
 }
 
@@ -876,7 +882,7 @@
   left: 15px;
   width: 150px;
   height: 150px;
-  color: #FFFFFF;
+  color: #ffffff;
   z-index: 5;
   display: flex;
   flex-direction: column;
@@ -891,7 +897,7 @@
   font-weight: 600;
   font-size: 30px;
   line-height: 1.33;
-  color: #FFFFFF;
+  color: #ffffff;
   margin-bottom: 10px;
 }
 
@@ -943,7 +949,7 @@
 .cinema-card__text-block {
   font-size: 12px;
   line-height: 1;
-  color: #FFFFFF;
+  color: #ffffff;
   display: flex;
   flex-wrap: wrap;
 }
@@ -999,7 +1005,7 @@
   font-family: "Montserrat-Medium", "Arial", sans-serif;
   font-size: 16px;
   line-height: 22px;
-  color: #D95C9B;
+  color: #d95c9b;
   text-align: right;
 }
 
@@ -1039,7 +1045,7 @@
 }
 
 .cinema-card__link {
-  color: #D95C9B;
+  color: #d95c9b;
   font-size: 16px;
   font-weight: bold;
 }
@@ -1123,11 +1129,15 @@
 }
 
 @media (max-width: 1400px) {
+  .cinema-header .header__menu-link {
+    font-size: 14px;
+  }
   .cinema-header .page-header__item:nth-child(1) {
-    width: 15%;
+    width: 20%;
   }
   .cinema-header .page-header__item:nth-child(2) {
-    width: 65%;
+    margin: 0 15px;
+    width: 60%;
   }
   .cinema-header .page-header-actions-item:nth-child(2) {
     width: 80%;
@@ -1137,7 +1147,7 @@
     width: 20%;
   }
   .cinema-header .page-header__item:nth-child(3) {
-    width: 17%;
+    width: 20%;
   }
   .header__menu-item:hover .animate-link:after,
   .header__menu-item:active .animate-link:after {
@@ -1243,7 +1253,7 @@
     display: none;
   }
   .cinema-header .search-box__item {
-    display: block;
+    display: block !important;
     position: static;
     transform: none;
     width: 100%;
@@ -1378,7 +1388,7 @@
 }
 
 .online-breadcrumbs .breadcrumbs {
-  background-color: #F8F8F8;
+  background-color: #f8f8f8;
   padding: 0;
   border-bottom: none;
   margin-bottom: 15px;
@@ -1421,7 +1431,7 @@
 
 .online-card__age.age span {
   padding: 17px 0;
-  background: #F8F8F8;
+  background: #f8f8f8;
 }
 
 .online-card__title {
@@ -1460,13 +1470,12 @@
   display: inline-block;
   font-size: 16px;
   line-height: 1;
-  color: #9C9C9C;
+  color: #9c9c9c;
   position: relative;
   margin-right: 5px;
 }
 
-.online-card__name span
-.online-card__link {
+.online-card__name span .online-card__link {
   transition: all 0.3s ease;
 }
 
@@ -1513,7 +1522,7 @@
   font-size: 16px;
   line-height: 1;
   font-weight: 600;
-  color: #DF0E77;
+  color: #df0e77;
   margin-right: 15px;
 }
 
@@ -1546,7 +1555,7 @@
   align-items: center;
   font-size: 16px;
   line-height: 1;
-  color: #9C9C9C;
+  color: #9c9c9c;
   position: relative;
   margin-right: 50px;
 }
@@ -1568,7 +1577,7 @@
 
 .online-card__link:hover svg,
 .online-card__link:active svg {
-  fill: #DF0E77;
+  fill: #df0e77;
 }
 
 .online-card__configuration {
@@ -1595,7 +1604,7 @@
   position: relative;
   font-size: 16px;
   line-height: 1;
-  color: #9C9C9C;
+  color: #9c9c9c;
   margin-right: 10px;
   margin-bottom: 5px;
 }
@@ -1627,7 +1636,7 @@
 .online-card__rate span {
   font-size: 12px;
   line-height: 1.33;
-  color: #9C9C9C;
+  color: #9c9c9c;
 }
 
 .online-card__rate-stars {
@@ -1707,7 +1716,7 @@
 .online-crew__position {
   font-size: 14px;
   line-height: 1;
-  color: #9C9C9C;
+  color: #9c9c9c;
 }
 
 .online-crew__name {
@@ -1744,7 +1753,7 @@
   text-align: center;
   height: 100%;
   color: #333333;
-  background-color: #F8F8F8;
+  background-color: #f8f8f8;
   border-radius: 100%;
 }
 
@@ -1754,9 +1763,18 @@
 
 .online-review__item {
   padding: 33px 30px;
-  background: #FFFFFF;
+  background: #ffffff;
   border-radius: 10px;
   margin-bottom: 20px;
+}
+
+.online-review__review-all {
+  cursor: pointer;
+  margin-top: 10px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 25px;
+  color: #df0e77;
 }
 
 .online-review__item:last-child {
@@ -1780,7 +1798,7 @@
   font-size: 14px;
   line-height: 1;
   text-transform: uppercase;
-  color: #FFFFFF;
+  color: #ffffff;
   padding: 18px 28px;
   background: linear-gradient(143deg, #df0e77 7.13%, #390796 95%);
   background-size: 100% 100%;
@@ -1831,7 +1849,7 @@
 .online-review__time {
   font-size: 14px;
   line-height: 1.5;
-  color: #9C9C9C;
+  color: #9c9c9c;
 }
 
 .online-review__review {
@@ -1872,7 +1890,7 @@
   text-align: center;
   height: 100%;
   color: #333333;
-  background-color: #F8F8F8;
+  background-color: #f8f8f8;
   border-radius: 100%;
   text-transform: uppercase;
   border-radius: 100px;
@@ -1881,7 +1899,7 @@
 .online-review__button-more {
   display: inline-block;
   line-height: 1.79;
-  color: #DF0E77;
+  color: #df0e77;
   background: #fff;
   padding: 0;
   text-shadow: none;
@@ -1903,7 +1921,7 @@
     height: 40px;
   }
   .online-card__age.age span {
-    padding: 12px  0;
+    padding: 12px 0;
   }
   .online-card__video,
   .online-card__links,
@@ -2071,7 +2089,7 @@
 .cinema-catalog__tags span {
   font-size: 16px;
   line-height: 1;
-  color: #9C9C9C;
+  color: #9c9c9c;
   margin-right: 5px;
   margin-bottom: 5px;
   position: relative;
@@ -2102,7 +2120,7 @@
 }
 
 .online-cinema-wrapper .sort {
-  background-color: #F8F8F8;
+  background-color: #f8f8f8;
 }
 
 .online-catalog {
@@ -2123,7 +2141,7 @@
 
 .online-sort .trigger-filter,
 .online-sort .nice-select {
-  background-color: #F8F8F8;
+  background-color: #f8f8f8;
 }
 
 .online-sort__custom-new {
@@ -2156,7 +2174,7 @@
   text-align: center;
   height: 100%;
   color: #333333;
-  background-color: #F8F8F8;
+  background-color: #f8f8f8;
   border-radius: 10px;
   transition: all 0.3s ease;
 }
@@ -2172,12 +2190,12 @@
   margin: 10px 0;
   margin-right: 34px;
   line-height: 1;
-  background: #F8F8F8;
+  background: #f8f8f8;
   overflow: hidden;
   transition: all 0.3s ease;
   border-radius: 10px;
   font-size: 14px;
-  border: 1px solid #D7D7D7;
+  border: 1px solid #d7d7d7;
   padding: 14px 20px;
   padding-left: 40px;
   position: relative;
@@ -2196,14 +2214,14 @@
 }
 
 .online-sort__custom:hover {
-  background: #DF0E77;
-  border: 1px solid #DF0E77;
+  background: #df0e77;
+  border: 1px solid #df0e77;
   color: #fff;
 }
 
 .online-sort__custom.current {
-  background: #DF0E77;
-  border: 1px solid #DF0E77;
+  background: #df0e77;
+  border: 1px solid #df0e77;
   color: #fff;
   padding-left: 20px;
   padding-right: 40px;
@@ -2221,14 +2239,14 @@
 }
 
 .online-sort__default {
-  border: 1px solid #F8F8F8;
+  border: 1px solid #f8f8f8;
   position: relative;
   padding-left: 20px;
 }
 
 .online-sort__default:hover {
-  background: #F8F8F8;
-  border: 1px solid #F8F8F8;
+  background: #f8f8f8;
+  border: 1px solid #f8f8f8;
   padding-left: 20px;
   color: #333;
 }
