--- a/src/scss/online.css
+++ b/src/scss/online.css
@@ -690,7 +690,7 @@
 .online-cinema__title:before {
 	position: absolute;
 	content: "";
-	top: 50%;
+	top: 56%;
 	transform: translate(-50%, -50%);
 	right: -40px;
 	background-image: url("../../img/arrow-more.png");
@@ -2449,14 +2449,120 @@
 	}
 }
 
-@media (max-width: 400px) {
-	/* .online-cinema-wrapper .trigger-filter, 
-    .online-cinema-wrapper .nice-select {
-        padding-right: 50px;
-        padding-left: 10px;
-    }
+/* online mobile menu */
 
-    .online-sort__custom-new span {
-        padding: 14px 30px;
-    } */
+.online__mmenu-navigation {
+    background: #fff;
+}
+
+.online__mmenu-item {
+	padding-left: 10px;
+	border-bottom: 1px solid #f5f5f5;
+}
+.online__mmenu-item:last-child {
+	border-bottom: none;
+}
+.online__mmenu-item.current,
+.online__mmenu-item:hover {
+	background-color: #df0e77;
+}
+.online__mmenu a {
+	position: relative;
+	display: block;
+	padding: 15px 0;
+	padding-left: 20px;
+	font-family: "Montserrat-Bold", "Arial", sans-serif;
+	font-size: 14px;
+	color: #333333;
+	text-transform: uppercase;
+}
+.online__mmenu-item a:hover,
+.online__mmenu-item.current a {
+	color: #fff;
+}
+.online__mmenu a::before {
+	content: "";
+	position: absolute;
+	top: 18px;
+	left: 0;
+	width: 7px;
+	height: 7px;
+	background-color: #df0e77;
+	border-radius: 100%;
+}
+.online__mmenu .online__mmenu-item.current a::before,
+.online__mmenu a:hover::before {
+	background-color: #ffffff;
+}
+@media (max-width: 1350px) {
+	.online__mmenu-item {
+		padding-left: 20px;
+	}
+}
+.online__mobile-wrapper {
+    position: relative;
+}
+
+.online__mmenu-list {
+	opacity: 0;
+	visibility: hidden;
+	height: 0;
+	transition: all 0.3s ease;
+}
+
+.online__mmenu-sub-list {
+    padding: 0px 20px 0px 20px;
+    background: #ffffff;
+}
+
+.online__mmenu-wrap {
+	opacity: 0;
+	visibility: hidden;
+	min-width: 200px;
+	transition: all 0.3s ease;
+	z-index: 100;
+	position: absolute;
+}
+
+.online__mmenu-item {
+	position: relative;
+}
+
+.online__mmenu-sub-link {
+	display: block;
+	transition: all 0.3s ease;
+}
+
+.online__mmenu-item:hover > .online__mmenu-list {
+	opacity: 1;
+	visibility: visible;
+	height: initial;
+}
+
+.online__mmenu-sub-item{
+	white-space: nowrap;
+}
+
+.online__mmenu-sub-link:hover,
+.online__mmenu-sub-link:active {
+	text-shadow: 0px 0px 0px #df0e77, 0px 0px 0px #df0e77;
+	color: #df0e77;
+}
+
+.online__has-child {
+    position: relative;
+}
+
+.online__has-child:before {
+    position: absolute;
+    content: "";
+    top: 50%;
+    transform: translate(-50%, -50%);
+    right: 15px;
+    background-image: url(../../img/arrow-more.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 7px;
+    height: 10px;
+    transition: all 0.3s ease;
 }
