--- a/src/scss/online.css
+++ b/src/scss/online.css
@@ -308,7 +308,7 @@
 .header__menu-item:active .animate-link:after {
 	position: absolute;
 	content: "";
-	bottom: -48px;
+	bottom: -51px;
 	left: 0;
 	height: 2px;
 	width: 100%;
@@ -404,7 +404,7 @@
 	visibility: visible;
 	width: 55px;
 	height: 55px;
-	background-image: url(../../img/search-icon.png);
+	background-image: url(../img/search-icon.png);
 	background-size: 27px;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -705,7 +705,7 @@
 	top: 56%;
 	transform: translate(-50%, -50%);
 	right: -40px;
-	background-image: url("../../img/arrow-more.png");
+	background-image: url("../img/arrow-more.png");
 	background-repeat: no-repeat;
 	background-size: contain;
 	width: 15px;
@@ -720,7 +720,7 @@
 
 .online-cinema__title:hover:before,
 .online-cinema__title:active:before {
-	background: url("../../img/arrow-more-pink.png") no-repeat;
+	background: url("../img/arrow-more-pink.png") no-repeat;
 	right: -50px;
 	background-size: contain;
 	width: 15px;
@@ -1171,10 +1171,10 @@
 		width: 20%;
 	}
 
-	.header__menu-item:hover .animate-link:after,
+	/* .header__menu-item:hover .animate-link:after,
 	.header__menu-item:active .animate-link:after {
-		bottom: -38px;
-	}
+		bottom: -43px;
+	} */
 
 	.header__menu-wrap {
 		padding-top: 39px;
@@ -2373,7 +2373,7 @@
 	top: 50%;
 	transform: translate(50%, -50%);
 	left: 0;
-	background: url(../../img/icon-default.png) no-repeat;
+	background: url(../img/icon-default.png) no-repeat;
 	background-size: contain;
 	width: 6px;
 	height: 6px;
@@ -2610,7 +2610,7 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	background-image: url(../../img/arrow-more.png);
+	background-image: url(../img/arrow-more.png);
 	background-repeat: no-repeat;
 	background-size: contain;
 	width: 7px;
@@ -2635,7 +2635,7 @@
 	top: 50%;
 	left: 0;
 	transform: translate(0, -50%) rotate(180deg);
-	background-image: url(../../img/arrow-more.png);
+	background-image: url(../img/arrow-more.png);
 	background-repeat: no-repeat;
 	background-size: contain;
 	width: 7px;
@@ -2651,6 +2651,8 @@
 }
 
 .page-navigation__title h1 {
+	color: #333;
+	text-transform: initial;
 	font-weight: 600;
 	font-size: 40px;
 	line-height: 1.25;
